--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,6 +4,7 @@ body {
 
 p {
 	color: #6a6a6a;
+	font-size: 14px;
 }
 
 a {
@@ -55,7 +56,7 @@ textarea {
 
 footer,
 footer a {
-	color: white !important;
+	color: #ffffff;
 	font-weight: 100;
 	position: fixed;
 	bottom: 80px;
@@ -63,15 +64,14 @@ footer a {
 	padding-left: 10px;
 }
 
-
 footer .fa-github {
 	font-size: 30px;
-	color: white;
+	color: white !important;
 	margin-left: -40px;
 }
 
 #contacto footer .fa-linkedin-in {
-	color:#e20000;
+	color: #e20000;
 	background-color: white;
 	font-size: 20px;
 	border: 0px;
@@ -98,7 +98,7 @@ footer .fa-github {
 }
 
 .whatsapp a {
-	color: white;
+	color: #ffffff;
 }
 
 #contacto {
@@ -108,26 +108,47 @@ footer .fa-github {
 	height: 77vh;
 }
 
-#proyectos{
+#proyectos {
 	background-image: url(../images/fondo-proyectos.png);
 	background-repeat: no-repeat;
 	background-size: 100%;
 	height: 77vh;
 }
 
-#proyectos footer,
-footer a {
+#proyectos img {
+	height: 177px;
+}
+
+#proyectos h2 {
+	color: #ffffff;
+	text-align: center;
+	font-size: 16px;
+}
+
+.color-gradiente {
+	background: rgba(184, 37, 20, 1);
+}
+
+#proyectos footer a {
 	color: #e20000 !important;
 }
 
-#proyectos footer .fa-github{
-	background-color: white !important;
-	color:#e20000 !important;
+#proyectos footer .fa-github {
+	background-color: #ffffff !important;
+	color: #e20000 !important;
 }
 
-#proyectos footer .fa-linkedin-in{
+#proyectos a.link-rojo {
+	color: #e20000;
+}
+
+#proyectos .btn-rojo {
+	color: #ffffff;
+}
+
+#proyectos footer .fa-linkedin-in {
 	background-color: #e20000 !important;
-	color: white !important;
+	color: #ffffff !important;
 	font-size: 20px;
 	border: 0px;
 	height: 32px;
@@ -135,7 +156,7 @@ footer a {
 	text-align: center;
 	padding: 8px 0 0 0;
 	border-radius: 80px;
-	margin: 0 8px;	
+	margin: 0 8px;
 }
 
 @media (max-width: 700px) {
