--- a/css/estilos.css
+++ b/css/estilos.css
@@ -15,7 +15,7 @@ a {
 h1 {
 	color: #e20000;
 	font-size: 2.5rem;
-	margin-bottom: -10px;
+	margin-bottom: 8px;
 }
 
 nav .nav-link {
@@ -160,10 +160,15 @@ footer .fa-github {
 	color: #ffffff;
 }
 
-#tecnologias .container-fluid {
-	background-color: rgba(184, 37, 20, 1);
-	width: 100%;
-	padding: 3bvng0px 20px 20px 20px;}
+#sobre-mi .card {
+    height: 182px;
+}
+
+#sobre-mi h3{
+    font-size: 14px;
+    color: #282828;
+    font-weight: 300;
+}
 
 #tecnologias h2 {
 	color:white;
