--- a/css/estilos.css
+++ b/css/estilos.css
@@ -54,26 +54,39 @@ textarea {
 	font-weight: 100;
 }
 
+.text-sm-start {
+	text-align: left !important;
+}
+
+footer a {
+	text-decoration: underline;
+}
 
 footer,
 footer a {
-	color: #ffffff;
 	font-weight: 100;
-	position: relative;
-	width: 100%;
-	height: 205px;
+	color: #ffffff;
 }
-
 
 footer .fa-github {
 	font-size: 30px;
-	color: white !important;
-	margin-left: -40px;
 }
 
-#contacto footer .fa-linkedin-in {
+#proyectos footer a,
+#sobre-mi footer a {
+	color: #e20000 !important;
+}
+
+#proyectos footer .fa-github,
+#sobre-mi footer .fa-github {
+	background-color: #ffffff;
 	color: #e20000;
-	background-color: white;
+}
+
+#proyectos footer .fa-linkedin-in,
+#sobre-mi footer .fa-linkedin-in {
+	background-color: #e20000;
+	color: #ffffff;
 	font-size: 20px;
 	border: 0px;
 	height: 32px;
@@ -84,6 +97,13 @@ footer .fa-github {
 	margin: 0 8px;
 }
 
+#proyectos footer .fa-github,
+#sobre-mi footer .fa-github {
+	font-size: 30px;
+	color: #e20000;
+}
+
+#contacto footer .fa-linkedin-in,
 #index footer .fa-linkedin-in {
 	color: #e20000;
 	background-color: white;
@@ -97,7 +117,6 @@ footer .fa-github {
 	margin: 0 8px;
 }
 
-
 .whatsapp {
 	background-color: #370a6d;
 	color: white;
@@ -107,111 +126,113 @@ footer .fa-github {
 	font-size: 30px;
 	text-align: center;
 	padding: 8px 0 15px 0;
-	right: 325px;
+	right: 80px;
 	position: fixed;
-	bottom: 60px;
+	bottom: 0px;
 }
 
 .whatsapp a {
 	color: #ffffff;
 }
 
-.cohete{
+.cohete {
 	height: 400px;
 }
 
-.cohete:hover{
-	transform:scale(1.1);
+.cohete:hover {
+	transform: scale(1.1);
 }
 
 .pb-3 {
-    padding-bottom: 1rem!important;
-}
-.mt-5 {
-    margin-top: 3rem!important;
+	padding-bottom: 1rem !important;
 }
 
 #sobre-mi .mt-4 {
-    padding-bottom: 70px;
-	margin-top: 1.5rem !important
+	padding-bottom: 70px;
+	margin-top: 1.5rem !important;
 }
-#contacto, #index{
+#contacto,
+#index {
 	background-image: url(../images/fondo-contacto.png);
 	background-repeat: no-repeat;
 	background-size: 100%;
 	height: 77vh;
 }
 
-#proyectos, #sobre-mi{
+#proyectos,
+#sobre-mi {
 	background-image: url(../images/fondo-proyectos.png);
 	background-repeat: no-repeat;
 	background-size: 100%;
 	height: 77vh;
 }
 
-#experiencia h3, #formacion h3 {
-    color: #6A6A6A;
-    font-size: 18px;
-    font-weight: 600;
+#experiencia h3,
+#formacion h3 {
+	color: #6a6a6a;
+	font-size: 18px;
+	font-weight: 600;
 }
 
-#idiomas .card{
-	background-color: #370A6D;
-    border-radius: 15px;
-    padding: 40px 0;
+#idiomas .card {
+	background-color: #370a6d;
+	border-radius: 15px;
+	padding: 40px 0;
 }
 
 #idiomas .fas {
-    font-size: 80px;
-    color: #ffffff;
+	font-size: 80px;
+	color: #ffffff;
 }
 
-#sobre-mi h2{
+#sobre-mi h2 {
 	font-size: 16px;
 }
 
-#sobre-mi li{
+#sobre-mi li {
 	padding-left: 0px;
 }
 
-#idiomas ul{
+#idiomas ul {
 	padding-left: 0px;
 }
 
-#formacion h2{
-	color:#e20000;
+#formacion h2 {
+	color: #e20000;
 	font-size: 24px !important;
 }
 
-#experiencia h2, #formacion h2 {
-    font-weight: 400;
-    font-size: 24px;
+#experiencia h2,
+#formacion h2 {
+	font-weight: 400;
+	font-size: 24px;
 }
-#experiencia h2, #experiencia h4 {
-    color: #370A6D;
+#experiencia h2,
+#experiencia h4 {
+	color: #370a6d;
 }
 
-#formacion h3{
-		color: #6A6A6A;
-		font-size: 18px;
-		font-weight: 600;
-	}
+#formacion h3 {
+	color: #6a6a6a;
+	font-size: 18px;
+	font-weight: 600;
+}
 
-#experiencia h4, #formacion h4{
-    font-size: 17px;
+#experiencia h4,
+#formacion h4 {
+	font-size: 17px;
 	color: #6a6a6a;
 }
 
-#experiencia h5, #formacion h5 {
-    color: #6A6A6A;
-    font-size: 14px;
+#experiencia h5,
+#formacion h5 {
+	color: #6a6a6a;
+	font-size: 14px;
 }
 
-#formacion .baw{
+#formacion .baw {
 	filter: grayscale(100%);
 }
-
-
 
 #proyectos img {
 	height: 177px;
@@ -227,91 +248,75 @@ footer .fa-github {
 	background: rgba(184, 37, 20, 1);
 }
 
-#proyectos footer a {
-	color: #e20000 !important;
-}
-
-#proyectos footer .fa-github {
-	background-color: #ffffff !important;
-	color: #e20000 !important;
-}
-
-#proyectos a.link-rojo {
-	color: #e20000;
-}
-
 #proyectos .btn-rojo {
 	color: #ffffff;
 }
 
 #sobre-mi .card {
-    height: 182px;
+	height: 182px;
 }
 
-#tecnologias h3{
-    font-size: 14px;
-    color: #282828;
-    font-weight: 300;
+#tecnologias h3 {
+	font-size: 14px;
+	color: #282828;
+	font-weight: 300;
 }
 
 #tecnologias h2 {
-	color:white;
+	color: white;
 	font-size: 24px;
 }
 
 #proyectos .card {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    min-width: 0;
-    word-wrap: break-word;
-    background-color: #fff;
-    background-clip: border-box;
-    border: 1px solid rgba(0,0,0,.125);
-    border-radius: .25rem;
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	min-width: 0;
+	word-wrap: break-word;
+	background-color: #fff;
+	background-clip: border-box;
+	border: 1px solid rgba(0, 0, 0, 0.125);
+	border-radius: 0.25rem;
 }
 
 #proyectos .py-5 {
-    padding-top: 3rem!important;
-    padding-bottom: 3rem!important;
+	padding-top: 3rem !important;
+	padding-bottom: 3rem !important;
 }
 
 #proyectos .p-sm-4 {
-    padding: 1.5rem!important;
+	padding: 1.5rem !important;
 }
 
 #proyectos .p-3 {
-		padding: 1rem!important;
-	}
-
-#proyectos footer .fa-linkedin-in {
-	background-color: #e20000 !important;
-	color: #ffffff !important;
-	font-size: 20px;
-	border: 0px;
-	height: 32px;
-	width: 32px;
-	text-align: center;
-	padding: 8px 0 0 0;
-	border-radius: 80px;
-	margin: 0 8px;
+	padding: 1rem !important;
 }
 
-.cohete{
+.cohete {
 	height: 400px;
 }
 
 #index .input-home p {
-    color: white;
-    font-size: 17px;
-    border: 1px solid white;
-    border-radius: 50px;
-    font-weight: 600;
+	color: white;
+	font-size: 17px;
+	border: 1px solid white;
+	border-radius: 50px;
+	font-weight: 600;
 }
+
+/*reglas para mobile*/
 
 @media (max-width: 700px) {
 	/* Para mobile */
-	#contacto {
+	#contacto,
+	#index {
 		background-image: url(../images/fondo-proyectos.png);
+	}
+}
+
+@media (max-width: 750px) {
+	/*footer para mobile*/
+	footer a {
+		color: #e20000;
 	}
 }
