--- a/css/estilos.css
+++ b/css/estilos.css
@@ -55,7 +55,6 @@ textarea {
 	font-weight: 100;
 }
 
-
 footer a {
 	text-decoration: underline;
 }
@@ -191,6 +190,23 @@ footer .fa-github {
 	padding-left: 0px;
 }
 
+#sobre-mi .pb-5 {
+    padding-bottom: 0px !important;
+}
+
+#sobre-mi .img-circle {
+	margin: 1em auto;
+	display: block;
+	background-color: #fff;
+	padding: 10px;
+	border-radius: 50%;
+}
+
+
+#sobre-mi .col-6 {
+	padding-bottom: 20px;
+}
+
 #idiomas ul {
 	padding-left: 0px;
 }
@@ -277,15 +293,6 @@ footer .fa-github {
 	border-radius: 0.25rem;
 }
 
-#proyectos .py-5 {
-	padding-top: 3rem !important;
-	padding-bottom: 3rem !important;
-}
-
-#proyectos .p-sm-4 {
-	padding: 1.5rem !important;
-}
-
 #proyectos .p-3 {
 	padding: 1rem !important;
 }
@@ -294,8 +301,8 @@ footer .fa-github {
 	height: 400px;
 }
 
-.cohete:hover{
-	transform:scale(1.1);
+.cohete:hover {
+	transform: scale(1.1);
 }
 
 #index .input-home p {
@@ -320,5 +327,16 @@ footer .fa-github {
 	/*footer para mobile*/
 	footer a {
 		color: #e20000;
+	}
+}
+
+@media (min-width: 1400px) {
+	.container,
+	.container-lg,
+	.container-md,
+	.container-sm,
+	.container-xl,
+	.container-xxl {
+		max-width: 1320px;
 	}
 }
