--- a/css/estilos.css
+++ b/css/estilos.css
@@ -228,6 +228,10 @@ footer .fa-github {
 	padding-bottom: 20px;
 }
 
+#idiomas {
+	height:280px;
+}
+
 #idiomas ul {
 	padding-left: 0px;
 }
@@ -316,6 +320,10 @@ footer .fa-github {
 	height: 500px;
 }
 
+#proyectos .mt-3{
+	margin-bottom: 10px !important;
+}
+
 #proyectos .p-3 {
 	padding: 1rem !important;
 }
@@ -360,6 +368,14 @@ footer .fa-github {
 		padding-left: 15px;
 		padding-bottom: 10px;
 	}
-
+	.card-idioma{
+		height:185px;
+	}
+	#idiomas .col-8 {
+		margin-top: -30px;
+	}
+	#idiomas {
+		height:500px;
+	}
 }
 
