--- a/css/style.css
+++ b/css/style.css
@@ -47,80 +47,104 @@ body{
     font-weight: 700;
 }
 
-.nav__menu{
-    display: none;
-}
 
 /* Hamburguer menu */
 
-/* .nav__menu--mobile{
-    display: block;
-    cursor: pointer;
-}
-
-.hamburguer__figure{
-    width:45px;
-    height:45px;
+.nav__menu--mobile{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
     cursor: pointer;
+    gap: .25rem;
 }
 
-.hamburguer__img{
-    width:100%;
-    height:100%;
-    margin-left: 2rem;
-}
-
-.nav__menu--show{
-    display: flex;
+.nav__menu--mobile.active{
     position: fixed;
+    top: 28px;
+    right: 25px;
     z-index: 1;
+}
+
+
+.nav__mobile--line{
+    background-color: var(--color-secondary);
+    height: 8px;
+    width: 40px;
+    z-index: 1;
+    border-radius: 0.1875rem;
+    transition: all .5s ease-in-out;
+}
+
+.nav__menu{
+    min-height:100vh;
+    min-width: 100vw;
+    position: fixed;
     top: 0;
     right: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    background-color: var(--color-background-dark);
-    transition: all 1s ease;
-    clip-path: circle(150% at 100% 0%);
+    background-color: var(--color-background-light);
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    display: none;
+    z-index: 1;
+    opacity: 0;
 }
+
+
+.nav__menu.active{
+    display: flex;
+    animation: showMenu 350ms ease-in-out alternate both;
+    max-height: 100%;
+}
+
+@keyframes showMenu{
+    from {
+        opacity: 0;
+    }   
+
+    to{
+       opacity: 1; 
+    }
+}
+
 
 .nav__list{
     list-style: none;
-    padding: 3rem;
-    width: 100vh;
-    height: 100%;
+    height:100%;
+    width: 100%;
+    margin-right: 2.375rem;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    gap: 3rem;
     align-items: center;
+    gap: 3rem;
+    justify-content: space-evenly;
 }
 
 .nav__list_a{
     text-decoration: none;
     color: var(--color-primary);
-    font-size: 1.375rem;
+    font-size: 1.125rem;
     font-weight: 800;
 }
 
-.hamburguer__img--cross{
-    display: none;
+.nav__list_a:active{
+    transition: all 0.5s
 }
 
+/* Lineas del hamburguer */
 
-.hamburguer__img--cross--show{
-    display: inline-block;
-    width: 35px;
-    height: 35px;
-    position: fixed;
-    z-index: 2;
-    margin-left: .5rem;
+.line-1.animated{
+    transform: rotate(-45deg) translate(-10px, 8px);
 }
- */
 
+.line-2.animated{
+    opacity: 0;
+}
+
+.line-3.animated{
+    transform: rotate(45deg) translate(-10px, -8px);
+}
 
 /* Hero */
 
@@ -699,19 +723,42 @@ body{
         width: 70%;
     }
 
+    .nav__menu--mobile.active{
+        top: 25px;
+        right: 65px;
+    }
+
+    .nav{
+        width: 90%;
+    }
+
 }
 
 @media (min-width: 1024px) {
 
     /* Header */
 
-    .header{
-        height:9vh;
+    .header.container{
+        min-height:9vh;
+        height: 100%;
+        width:100%;
+    }
+
+    .nav__menu{
+        background-color: var(--color-background-dark);
+        min-width: 40%;
+        min-height: 3vh;
+        opacity: 1;
+        display: flex;
+        position: static;
+        flex-direction: row;
     }
 
     .nav{
         justify-content: space-evenly;
         flex-direction: row;
+        height:100%;
+        width:100%;
     }
 
     .nav__logo{
@@ -725,9 +772,20 @@ body{
         display: none;
     }
 
-    .nav__menu{
-        display: inline-block;
-    }
+    /* .nav__menu{
+        min-height:100vh;
+        min-width: 100vw;
+        position: fixed;
+        top: 0;
+        right: 0;
+        background-color: var(--color-background-light);
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        display: none;
+        z-index: 1;
+        opacity: 0;
+    } */
 
     .nav__list{
         width: 100%;
@@ -951,6 +1009,10 @@ body{
 
     .nav__logo{
         width: 40%;
+    }
+
+    .nav__menu{
+        margin-right: 8rem;
     }
     
     .nav__link{
