--- a/css/style.css
+++ b/css/style.css
@@ -88,38 +88,29 @@ body{
     position: fixed;
     top: 0;
     right: 0;
+    bottom: 0;
+    left: 0;
     background-color: var(--color-background-light);
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    display: none;
     z-index: 1;
-    opacity: 0;
+    display: flex;
+    transform: translateY(-100%);
+    transition: all 0.8s ease-in-out;
 }
 
 
 .nav__menu.active{
-    display: flex;
-    animation: showMenu 350ms .15s ease-in-out both;
+    transform: translateY(0);
     max-height: 100%;
     min-height: 100%;
-}
-
-@keyframes showMenu{
-    from {
-        opacity: 0;
-    }   
-
-    to{
-       background-color: var(--color-background-dark);
-       opacity: 1; 
-    }
 }
 
 
 .nav__list{
     list-style: none;
-    height:100%;
+    height:50%;
     width: 100%;
     margin-right: 2.375rem;
     display: flex;
@@ -295,7 +286,7 @@ body{
 
 .title{
     color: var(--color-primary);
-    text-decoration: underline;
+    /* text-decoration: underline; */
     font-size: 1.5rem;
 }
 
@@ -614,8 +605,13 @@ body{
     font-size: 1.25rem;
 }
 
+.contact__email--link{
+    width: 100%;
+    height: 100%;
+}
+
 .contact__email{
-    width: 60%;
+    width: 80%;
     height: 80%;
 }
 
@@ -764,6 +760,8 @@ body{
         display: flex;
         position: static;
         flex-direction: row;
+        transform: none;
+        transition: none;
     }
 
     .nav{
@@ -905,11 +903,6 @@ body{
     }
 
     /* Skills */
-
-    .skills{
-        gap: 2rem;
-    }
-
     .skills.container{
         height: 100%;
     }
@@ -928,7 +921,7 @@ body{
     /* Education */
 
     .education{
-        gap: 4rem;
+        gap: 2rem;
     }
 
     .education.container{
@@ -975,10 +968,6 @@ body{
 }
 
 @media (min-width: 1440px){
-    .hero__subtitle{
-        width: 76%;
-    }
-
     .contact__container{
         width: 50%;
     }
@@ -1003,10 +992,6 @@ body{
 
     .hero__photo{
         width:30%;
-    }
-
-    .hero__subtitle{
-        width: 57%;
     }
 
     .nav__logo{
