--- a/css/style.css
+++ b/css/style.css
@@ -157,7 +157,8 @@ body {
   border: 0.25rem solid var(--color-secondary);
   box-shadow: 0 0 0.625rem var(--color-secondary);
   border-radius: 6rem;
-  animation: shadow 1s 0.5s alternate infinite linear;
+  animation: shadow 1s 0.5s alternate infinite linear; 
+  z-index: 99;
 }
 
 /* Border photo animation */
@@ -212,7 +213,7 @@ body {
   border-right: 4px solid var(--color-secondary);
   overflow: hidden;
   white-space: nowrap;
-  width: 23.2ch;
+  width: 270px;
   animation: typing 3.25s alternate infinite steps(24, end),
     blink 1s alternate infinite steps(24);
 }
@@ -257,6 +258,14 @@ body {
   transform: scale(1.1);
   transition: 0.5s;
 }
+
+/* Particles */
+#particles-js{
+  height: 65%;
+  width: 100%;
+  position: absolute;
+}
+
 
 /* About me */
 .about {
@@ -303,7 +312,7 @@ body {
 .about__image--dev {
   width: 200px;
   height: 200px;
-  margin: 2rem 0 1rem 0;
+  margin: 3rem 0 1rem 0;
 }
 
 /* Skills */
@@ -347,14 +356,16 @@ body {
 
 .skills__logo--img:hover {
   transform: scale(1.2);
-  transition: 0.5s;
-  background-color: var(--color-secondary);
+  transition: .5s;
+  /* background-color: var(--color-secondary); */
+  filter:brightness(1);
   border-radius: 2rem;
 }
 
 .skills__logo:hover {
   transform: scale(1.2);
-  transition: 0.5s;
+  filter:brightness(100);
+  transition: .5s;
 }
 
 /* Education */
@@ -490,13 +501,13 @@ body {
   width:100%;
   height:100%;
   cursor:pointer;
-
+  filter:brightness(.7);
 }
 
 .control__right:hover, .control__left:hover{
   transform:scale(1.5);
   transition: transform .5s;
-  color: red;
+  filter:brightness(1);
 }
 
 .hover__image{
@@ -911,6 +922,7 @@ body {
 
   .hero__subtitle {
     font-size: 1.625rem;
+    width: 335px;
   }
 
   .hero__description {
@@ -936,6 +948,7 @@ body {
     width: 400px;
     height: 400px;
     border-radius: 15rem;
+    z-index: 99;
   }
 
   .hero__img_profile {
@@ -950,10 +963,6 @@ body {
     font-size: 2.875rem;
   }
 
-  .about {
-    gap: 1rem;
-  }
-
   .about.container {
     height: 100%;
     width: 100%;
@@ -965,8 +974,8 @@ body {
     align-items: center;
     gap: 2rem;
     width: 80%;
-    height: 80%;
-    max-height: 600px;
+    height: 500px;
+    max-height: 700px;
   }
 
   .about__subtitle {
@@ -974,9 +983,12 @@ body {
   }
 
   .about__image {
-    margin-top: 10rem;
-    height: 60vh;
+    height: 60%;
     width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
   }
 
   .about__text {
@@ -991,7 +1003,7 @@ body {
 
   .about__image--dev {
     width: 80%;
-    height: 70%;
+    height: 100%;
   }
 
   /* Skills */
@@ -1037,21 +1049,6 @@ body {
     width:10%;
   }
 
-  /* .project{
-        gap: 4rem;
-    }
-
-
-    .project.container{
-        height: 100%;
-    }
-
-    .project__container{
-        display: grid;
-        grid-template-columns: repeat(3,1fr);
-        grid-template-rows: repeat(1,1fr);
-    } */
-
   /* Contact */
   .contact__container {
     width: 70%;
@@ -1074,10 +1071,6 @@ body {
     margin-top: 1rem;
   }
 
-  .about__image{
-    margin-top: 15rem;
-    height:50vh;
-  }
 }
 
 @media (min-width: 1920px) {
@@ -1107,10 +1100,6 @@ body {
 
   .about__text {
     margin-bottom: 6rem;
-  }
-
-  .about__image {
-    height: 50vh;
   }
 
   .skills__logo {
