--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,9 @@
   box-sizing: border-box;
 }
 
-html{
+html {
   font-size: 16px;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -160,7 +161,7 @@ body {
   border: 0.25rem solid var(--color-secondary);
   box-shadow: 0 0 0.625rem var(--color-secondary);
   border-radius: 6rem;
-  animation: shadow 1s 0.5s alternate infinite linear; 
+  animation: shadow 1s 0.5s alternate infinite linear;
   z-index: 99;
 }
 
@@ -263,12 +264,11 @@ body {
 }
 
 /* Particles */
-#particles-js{
+#particles-js {
   height: 65%;
   width: 100%;
   position: absolute;
 }
-
 
 /* About me */
 .about {
@@ -359,16 +359,15 @@ body {
 
 .skills__logo--img:hover {
   transform: scale(1.2);
-  transition: .5s;
+  transition: 0.5s;
   /* background-color: var(--color-secondary); */
-  filter:brightness(1);
   border-radius: 2rem;
 }
 
 .skills__logo:hover {
   transform: scale(1.2);
-  filter:brightness(100);
-  transition: .5s;
+  filter: brightness(2);
+  transition: 0.5s;
 }
 
 /* Education */
@@ -429,7 +428,7 @@ body {
 
 .education__title_card {
   color: var(--color-primary);
-  width:90%;
+  width: 90%;
 }
 
 .education__paragraph_card {
@@ -438,29 +437,28 @@ body {
 
 /* Projects */
 
-.project{
-    background-color: var(--color-background-light);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    gap: 2rem;
+.project {
+  background-color: var(--color-background-light);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  gap: 2rem;
 }
 
-
 /*Carrusel jQuery*/
-.carrusel__container{
+.carrusel__container {
   width: 100%;
 }
 
-.carrusel{
+.carrusel {
   width: 100%;
   height: 100%;
   padding: 0 30px;
 }
 
-.carrusel__figure{
+.carrusel__figure {
   background-color: red;
   height: 400px;
   width: 100%;
@@ -470,35 +468,40 @@ body {
   font-weight: 600;
   margin: 20px 0;
   border-radius: 10px;
-  box-shadow: 0px 4px 15px rgba(0,0,0,0.2);
-  transition: .5s ease-in-out;
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+  transition: 0.5s ease-in-out;
 }
 
-.carrusel__image{
+.carrusel__image {
   width: 100%;
   height: 100%;
 }
 
-.owl-nav{
+.owl-nav {
   display: flex;
   position: absolute;
   align-items: center;
   justify-content: space-between;
   width: 100%;
   opacity: 1;
-  color: #fff;
-  font-size: 30px;
+  color: var(--color-primary);
+  font-size: 50px;
   top: 180px;
   right: 0;
 }
 
-.hover__image{
-  width:0;
-  height:100%;
+.owl-nav:hover{
+  color: var(--color-secondary);
+  transition: 0.5s;
+}
+
+.hover__image {
+  width: 0;
+  height: 91%;
   position: absolute;
-  top: 0;
-  border-radius: 28px;
-  background-color: rgba(0, 0, 0, 0.71);
+  top: 20px;
+  bottom: 0px;
+  background-color: rgba(0, 0, 0, .9);
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -508,11 +511,12 @@ body {
   color: #fff;
 }
 
-.hover__title{
-  font-size: 30px;
+.hover__title {
+  font-size: 1.5rem;
+  margin: 0 0.625rem;
 }
 
-.hover__description{
+.hover__description {
   color: #fff;
   display: flex;
   flex-direction: column;
@@ -521,32 +525,56 @@ body {
   justify-content: center;
 }
 
-.hover__paragraph{
-  margin-bottom: 30px;
+.hover__paragraph {
+  font-size: 0.8rem;
+  margin-bottom: 0.9375rem;
   width: 80%;
-  text-align:justify;
+  text-align: justify;
 }
 
-.hover__link{
+.hover__links {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 0.8rem;
+}
+
+.hover__link {
+  font-size: 1rem;
   text-decoration: none;
   border: 2px solid none;
-  color: var(--color-background-dark);
+  color: var(--color-primary);
   background-color: var(--color-secondary);
-  width:40%;
-  padding:5px 0;
-  border-radius:30px;
+  width: 125px;
+  border-radius: 30px;
 }
 
-.hover__link:hover{
-  /* background-color: var(--color-primary);
+.hover__link:hover {
+  background-color: var(--color-primary);
+  color: var(--color-secondary);
   transform: scale(1.1);
-  transition: 0.5s; */
+  transition: 0.6s;
 }
 
-.carrusel__figure:hover .hover__image{
+.hover__figure {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  gap: 0.5rem;
+  width: 40px;
+  height: 40px;
+}
+
+.hover__icon {
+  width: 100%;
+  height: 80%;
+}
+
+.carrusel__figure:hover .hover__image {
   width: 100%;
 }
-
 
 /* Contact */
 
@@ -622,7 +650,16 @@ body {
   text-decoration: none;
 }
 
+.contact__phone{
+  display: flex;
+}
+
 .contact__phone:hover {
+  transform: scale(1.1);
+  transition: 0.5s;
+}
+
+.contact__figure:hover{
   transform: scale(1.1);
   transition: 0.5s;
 }
@@ -746,20 +783,24 @@ body {
 
 /* Media queries */
 
-@media (min-width:375px){
-  .carrusel-item{
+@media (min-width: 375px) {
+  .carrusel-item {
     min-width: 315px;
   }
 }
-
 
 @media (min-width: 425px) {
   .arrow__top {
     right: 1.75rem;
   }
 
-  .carrusel-item{
+  .carrusel-item {
     min-width: 350px;
+  }
+
+  .hover__figure {
+    width: 50px;
+    height: 50px;
   }
 }
 
@@ -781,10 +822,18 @@ body {
     right: 2.75rem;
   }
 
-  .carrusel-item{
+  .carrusel-item {
     min-width: 500px;
   }
 
+  .hover__paragraph{
+    font-size: 1rem;
+  }
+
+  .hover__figure {
+    width: 60px;
+    height: 60px;
+  }
 
 }
 
@@ -929,7 +978,6 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-
   }
 
   .about__text {
@@ -982,12 +1030,12 @@ body {
 
   /* Projects */
 
-  .carrusel-items{
+  .carrusel-items {
     width: 85%;
   }
 
-  .carrusel__control{
-    width:10%;
+  .carrusel__control {
+    width: 10%;
   }
 
   /* Contact */
@@ -1011,7 +1059,6 @@ body {
     padding: 0.75rem 1.5rem;
     margin-top: 1rem;
   }
-
 }
 
 @media (min-width: 1920px) {
