--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ body {
   align-items: center;
   background-color: var(--color-background-dark);
   width: 100%;
+  height: 10%;
 }
 
 .header.show {
@@ -255,6 +256,7 @@ body {
   padding: 0.5rem 1rem;
   border-radius: 0.75rem;
   text-decoration: none;
+  z-index: 10;
 }
 
 .hero__button_cv:hover {
