--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  z-index: 1;
+  z-index: 3;
   display: flex;
   transform: translateY(-100%);
   transition: all 0.8s ease-in-out;
@@ -228,7 +228,7 @@ body {
     width: 0;
   }
 }
-ero__button
+
 @keyframes blink {
   50% {
     border-color: transparent;
@@ -264,6 +264,44 @@ ero__button
   transform: scale(1.1);
   transition: 0.5s;
 }
+
+.hero__social{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  text-decoration: none;
+  z-index: 1;
+}
+
+.hero__div{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: .5rem;
+}
+
+.hero__img-social{
+  width: 50px;
+  box-shadow: 0 0 0.625rem var(--color-quinary);
+  animation: shadow 1s 0.5s alternate infinite linear;
+  border-radius: 1.5rem;
+}
+
+.hero__img-social:hover{
+  transform: scale(1.2);
+  transition: 0.5s;
+  background-color: var(--color-secondary);
+  border-radius: 2rem;
+}
+
+.hero__social-name{
+  text-decoration: none;
+  color: var(--color-primary);
+
+}
+
 
 /* Particles */
 #particles-js {
@@ -449,133 +487,99 @@ ero__button
   gap: 2rem;
 }
 
-/*Carrusel jQuery*/
-.carrusel__container {
-  width: 100%;
+.project__container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  flex-direction: column;
+  flex-wrap: wrap;
 }
 
-.carrusel {
-  width: 100%;
-  height: 100%;
-  padding: 0 30px;
+.project__card {
+  width: 250px;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 
-.carrusel__figure {
-  background-color: red;
-  height: 400px;
+.project__figure {
+  height: 250px;
   width: 100%;
   text-align: center;
   color: #fff;
   font-size: 90px;
   font-weight: 600;
-  margin: 20px 0;
   border-radius: 10px;
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
   transition: 0.5s ease-in-out;
 }
 
-.carrusel__image {
+.project__image {
   width: 100%;
   height: 100%;
+  opacity: 0.3;
+  object-fit: fill;
 }
 
-.owl-nav {
-  display: flex;
-  position: absolute;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
+
+
+.project__image:hover {
   opacity: 1;
-  color: var(--color-primary);
-  font-size: 50px;
-  top: 180px;
-  right: 0;
+  transform: scale(1.01);
+  transition: all 0.5s;
 }
 
-.owl-nav:hover{
-  color: var(--color-secondary);
-  transition: 0.5s;
-}
-
-.hover__image {
-  width: 0;
-  height: 91%;
-  position: absolute;
-  top: 20px;
-  bottom: 0px;
-  background-color: rgba(0, 0, 0, .9);
+.details__container {
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
-  overflow: hidden;
-  transition: all 400ms ease-in-out;
-  color: #fff;
+  height: 250px;
 }
 
-.hover__title {
-  font-size: 1.5rem;
-  margin: 0 0.625rem;
+.details__title {
+  color: var(--color-primary);
+  text-align: center;
 }
 
-.hover__description {
-  color: #fff;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  align-items: center;
-  justify-content: center;
-}
-
-.hover__paragraph {
-  font-size: 0.8rem;
-  margin-bottom: 0.9375rem;
-  width: 80%;
+.details__paragraph {
+  color: var(--color-quaternary);
   text-align: justify;
 }
 
-.hover__links {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 0.8rem;
-}
-
-.hover__link {
-  font-size: 1rem;
-  text-decoration: none;
-  border: 2px solid none;
-  color: var(--color-primary);
-  background-color: var(--color-secondary);
-  width: 125px;
-  border-radius: 30px;
-}
-
-.hover__link:hover {
-  background-color: var(--color-primary);
-  color: var(--color-secondary);
-  transform: scale(1.1);
-  transition: 0.6s;
-}
-
-.hover__figure {
+.details__figure {
+  margin-top: 1rem;
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: row;
-  gap: 0.5rem;
+  flex-wrap: wrap;
+}
+
+.details__icon {
   width: 40px;
   height: 40px;
 }
 
-.hover__icon {
-  width: 100%;
-  height: 80%;
+.details__links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
 }
 
-.carrusel__figure:hover .hover__image {
-  width: 100%;
+.details__link {
+  text-decoration: none;
+  color: var(--color-secondary);
+  font-weight: bold;
+}
+
+.details__link:hover {
+  color: var(--color-quaternary);
+  transition: 0.5s;
+  cursor:pointer;
 }
 
 /* Contact */
@@ -652,7 +656,7 @@ ero__button
   text-decoration: none;
 }
 
-.contact__phone{
+.contact__phone {
   display: flex;
 }
 
@@ -661,7 +665,7 @@ ero__button
   transition: 0.5s;
 }
 
-.contact__figure:hover{
+.contact__figure:hover {
   transform: scale(1.1);
   transition: 0.5s;
 }
@@ -751,60 +755,11 @@ ero__button
   border-radius: 2rem;
 }
 
-/* Button for header */
-
-.arrow__top {
-  background-color: var(--color-secondary);
-  border-radius: 0.5rem;
-  width: 35px;
-  height: 35px;
-  display: none;
-  align-items: center;
-  justify-content: center;
-  position: fixed;
-  bottom: 0.8rem;
-  right: 1rem;
-}
-
-.arrow__top:hover {
-  transform: scale(1);
-  transition: 0.5s ease-in-out;
-  background-color: var(--color-background-light);
-}
-
-.arrow__top_img {
-  width: 50%;
-  height: 50%;
-}
-
-.arrow__top.active {
-  display: flex;
-}
-
 /* ------------------------------------------------------------------------ */
 
 /* Media queries */
 
-@media (min-width: 375px) {
-  .carrusel-item {
-    min-width: 315px;
-  }
-}
-
-@media (min-width: 425px) {
-  .arrow__top {
-    right: 1.75rem;
-  }
-
-  .carrusel-item {
-    min-width: 350px;
-  }
-
-  .hover__figure {
-    width: 50px;
-    height: 50px;
-  }
-}
+/* tablet */
 
 @media (min-width: 768px) {
   .contact__container {
@@ -820,23 +775,9 @@ ero__button
     width: 90%;
   }
 
-  .arrow__top {
-    right: 2.75rem;
+  .project__container {
+    flex-direction: row;
   }
-
-  .carrusel-item {
-    min-width: 500px;
-  }
-
-  .hover__paragraph{
-    font-size: 1rem;
-  }
-
-  .hover__figure {
-    width: 60px;
-    height: 60px;
-  }
-
 }
 
 @media (min-width: 1024px) {
@@ -899,9 +840,9 @@ ero__button
     font-weight: 800;
   }
 
-  .nav__list_a:hover{
+  .nav__list_a:hover {
     color: var(--color-secondary);
-    transition: .5s;
+    transition: 0.5s;
   }
   /* Hero */
 
@@ -1036,14 +977,6 @@ ero__button
 
   /* Projects */
 
-  .carrusel-items {
-    width: 85%;
-  }
-
-  .carrusel__control {
-    width: 10%;
-  }
-
   /* Contact */
   .contact__container {
     width: 70%;
@@ -1064,6 +997,10 @@ ero__button
   .hero__button_cv {
     padding: 0.75rem 1.5rem;
     margin-top: 1rem;
+  }
+
+  .project__container{
+    width: 70%;
   }
 }
 
