--- a/css/style.css
+++ b/css/style.css
@@ -152,17 +152,13 @@ body {
   background-color: var(--color-background-light);
 }
 
-.hero__photo {
-  margin: 1rem 0 0 0;
-}
-
 .hero__figure {
-  width: 200px;
-  height: 200px;
-  border: 0.25rem solid var(--color-secondary);
-  box-shadow: 0 0 0.625rem var(--color-secondary);
+  width: 250px;
+  height: 250px;
+  /* border: 0.25rem solid var(--color-secondary); */
+  /* box-shadow: 0 0 0.625rem var(--color-secondary); */
   border-radius: 6rem;
-  animation: shadow 1s 0.5s alternate infinite linear;
+  /* animation: shadow 1s 0.5s alternate infinite linear; */
   z-index: 99;
 }
 
@@ -195,6 +191,7 @@ body {
   gap: 1rem;
   text-align: justify;
   margin-top: 1.5rem;
+  z-index: 5;
 }
 
 .hero__title {
@@ -256,7 +253,7 @@ body {
   padding: 0.5rem 1rem;
   border-radius: 0.75rem;
   text-decoration: none;
-  z-index: 1;
+  z-index: 5;
 }
 
 .hero__button_cv:hover {
@@ -265,49 +262,50 @@ body {
   transition: 0.5s;
 }
 
-.hero__social{
+.hero__social-container {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 1rem;
+  margin-top: 2rem;
   text-decoration: none;
   z-index: 1;
 }
 
-.hero__div{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: .5rem;
+.hero__social-img {
+  width: 35px;
 }
 
-.hero__img-social{
-  width: 50px;
-  box-shadow: 0 0 0.625rem var(--color-quinary);
-  animation: shadow 1s 0.5s alternate infinite linear;
-  border-radius: 1.5rem;
+.hero__social-figure {
+  width: 35px;
+  height: 35px;
+  filter: grayscale(100%);
+
+  transition: filter 0.5s;
 }
 
-.hero__img-social:hover{
-  transform: scale(1.2);
-  transition: 0.5s;
-  background-color: var(--color-secondary);
-  border-radius: 2rem;
+.ig-figure {
+  width: 45px;
+  height: 45px;
 }
 
-.hero__social-name{
-  text-decoration: none;
-  color: var(--color-primary);
-
+.hero__social-figure:hover {
+  transform: scale(1.1);
+  filter: brightness(1);
+  transition: 0.8s;
 }
 
+.hero__social-img {
+  width: 100%;
+  height: 100%;
+}
 
 /* Particles */
 #particles-js {
   height: 65%;
   width: 100%;
   position: absolute;
+  z-index: 0;
 }
 
 /* About me */
@@ -379,6 +377,18 @@ body {
   gap: 1.5rem;
 }
 
+.logo__description {
+  font-size: 0.75rem;
+  color: var(--color-quaternary);
+  filter: grayscale(100%);
+  transition: filter 0.5s;
+}
+
+.logo__description:hover {
+  filter: none;
+  transition: 0.5s;
+}
+
 .skills__logo {
   display: flex;
   flex-direction: column;
@@ -386,33 +396,24 @@ body {
   justify-content: space-around;
   width: 120px;
   height: 120px;
-}
-
-.logo__description {
-  font-size: 0.75rem;
-  color: var(--color-quaternary);
-}
-
-.skills__logo--img {
-  width: 50%;
-}
-
-.skills__logo--img:hover {
-  transform: scale(1.2);
-  transition: 0.5s;
-  /* background-color: var(--color-secondary); */
-  border-radius: 2rem;
+  filter: grayscale(100%);
+  transition: filter 0.5s;
 }
 
 .skills__logo:hover {
-  transform: scale(1.2);
-  filter: brightness(2);
+  filter: none;
   transition: 0.5s;
 }
 
-/* Education */
+.skills__logo--img {
+  min-width: 50%;
+  width: 50%;
+  max-width: 50%;
+}
 
-.education {
+/* Experiencia */
+
+.experiencia {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -422,57 +423,12 @@ body {
   background-color: var(--color-background-dark);
 }
 
-.education__container {
+.experiencia__container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 2rem;
-}
-
-.education__card {
-  background-color: var(--color-background-light);
-  border-radius: 2rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  gap: 1rem;
-  width: 270px;
-  height: 400px;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
-.education__figure {
-  width: 225px;
-  height: 225px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.education__img {
-  width: 90%;
-  height: 90%;
-  opacity: 0.3;
-  object-fit: fill;
-}
-
-.education__img:hover {
-  opacity: 1;
-  transform: scale(1.11);
-  transition: all 0.5s;
-}
-
-.education__title_card {
-  color: var(--color-primary);
-  width: 90%;
-}
-
-.education__paragraph_card {
-  color: var(--color-quaternary);
 }
 
 /* Projects */
@@ -523,8 +479,6 @@ body {
   object-fit: fill;
 }
 
-
-
 .project__image:hover {
   opacity: 1;
   transform: scale(1.01);
@@ -553,6 +507,7 @@ body {
 .details__figure {
   margin-top: 1rem;
   display: flex;
+  gap: 0.5rem;
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
@@ -579,7 +534,7 @@ body {
 .details__link:hover {
   color: var(--color-quaternary);
   transition: 0.5s;
-  cursor:pointer;
+  cursor: pointer;
 }
 
 /* Contact */
@@ -630,21 +585,31 @@ body {
 
 .contact__info {
   font-size: 1.8rem;
+  text-align: center;
   color: var(--color-quinary);
 }
 
 .contact__card_button {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr;
+  display: flex;
+  flex-direction: column;
   align-items: center;
+  justify-content: center;
   border-bottom: 1px solid var(--color-quaternary);
-  width: 200px;
-  padding: 1rem;
+  width: 150px;
+  padding-bottom: 1rem;
+  filter: grayscale(100%);
+
+  transition: filter 0.5s;
+}
+
+.contact__card_button:hover {
+  transform: scale(1.1);
+  filter: brightness(1);
+  transition: 0.8s;
 }
 
 .contact__button {
-  width: 60%;
+  width: 100%;
   margin: 0 auto;
   font-weight: 700;
   font-size: 0.75rem;
@@ -675,17 +640,11 @@ body {
 }
 
 .contact__card_email {
-  height: 80%;
+  width: 100px;
+  height: 80px;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.contact__card_email:hover {
-  transform: scale(1.1);
-  transition: 0.5s;
-  background-color: var(--color-secondary);
-  border-radius: 4rem;
 }
 
 .contact__link {
@@ -700,8 +659,8 @@ body {
 }
 
 .contact__email {
-  width: 80%;
-  height: 80%;
+  width: 100%;
+  height: 100%;
 }
 
 /* Footer */
@@ -726,8 +685,9 @@ body {
 }
 
 .footer__paragraph {
-  color: var(--color-primary);
-  font-size: 1.125rem;
+  font-weight: bold;
+  color: var(--color-secondary);
+  font-size: 1.5rem;
 }
 
 .footer__social {
@@ -759,6 +719,15 @@ body {
 
 /* Media queries */
 
+/*entre 425px y 768px */
+
+@media (min-width: 425px) {
+  .skills__logo_container {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+  }
+}
+
 /* tablet */
 
 @media (min-width: 768px) {
@@ -769,6 +738,11 @@ body {
   .nav__menu--mobile.active {
     top: 25px;
     right: 65px;
+  }
+
+  .skills__logo_container {
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(2, 1fr);
   }
 
   .nav {
@@ -948,7 +922,7 @@ body {
   }
 
   .skills__logo_container {
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(2, 1fr);
     width: 60%;
     gap: 0.5rem;
@@ -997,9 +971,10 @@ body {
   .hero__button_cv {
     padding: 0.75rem 1.5rem;
     margin-top: 1rem;
+    z-index: 5;
   }
 
-  .project__container{
+  .project__container {
     width: 70%;
   }
 }
@@ -1039,5 +1014,14 @@ body {
 
   .contact__container {
     width: 40%;
+  }
+  @media (min-width: 1920px) {
+    .hero__figure {
+      height: 500px;
+      width: 500px;
+    }
+    .hero__img_profile {
+      object-fit: fill;
+    }
   }
 }
