--- a/css/style.css
+++ b/css/style.css
@@ -677,6 +677,7 @@ body {
 
 .footer__name {
   border-top: 1px solid var(--color-primary);
+  width: 300px;
   padding-top: 1rem;
   margin: 1rem;
   display: flex;
@@ -694,18 +695,18 @@ body {
   display: flex;
   justify-content: center;
   align-content: center;
+  gap: 25px;
   margin: 1.5rem;
 }
 
 .footer__figure {
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
 }
 
 .footer__img {
-  margin: 0.5rem;
-  width: 70%;
-  height: 70%;
+  width: 100%;
+  height: 100%;
 }
 
 .footer__img:hover {
